Added text icons for ai leader nodes, added more locs and scripted modifiers for leader cap and negative traits, refactored more ethic bonuses

--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -711,61 +711,150 @@
 	concept_tec_ethic_policy_alias: "£system£ Ethic Policies"
 	concept_tec_ethic_policy_desc: "Ethic policies are specific empire policies that allow the adaptation of an ethic to diverse playstyles, builds and background enrichment.\nGenerally their effects are doubled for fanatic versions of the ethic axis."
 
-	concept_tec_policy_tec_egalitarian_ethic_policy: "$ethic_egalitarian$ Policies"
-	concept_tec_policy_tec_egalitarian_ethic_policy_alias: "$concept_tec_policy_tec_egalitarian_ethic_policy$"
-	concept_tec_policy_tec_egalitarian_ethic_policy_desc: "TO DO"
+	concept_tec_policy_artificial_intelligence_policy: "$policy_artificial_intelligence_policy$ Policy"
+  concept_tec_policy_artificial_intelligence_policy_alias: "$policy_artificial_intelligence_policy$"
+	concept_tec_policy_artificial_intelligence_policy_icon: "£policy£ $policy_artificial_intelligence_policy$ Policy"
+	concept_tec_policy_artificial_intelligence_policy_alias_icon: "£policy£ $policy_artificial_intelligence_policy$"
+	concept_tec_policy_artificial_intelligence_policy_desc: "$policy_artificial_intelligence_policy_desc$\n\nOptions:\n - ['concept_tec_policy_option_ai_outlawed_alias']\n - ['concept_tec_policy_option_ai_servitude_alias']\n - ['concept_tec_policy_option_ai_full_rights_alias']"
 
-	concept_tec_ethic_policy_authoritarian: "$ethic_authoritarian$ Policies"
-	concept_tec_ethic_policy_authoritarian_alias: "$concept_tec_ethic_policy_authoritarian$"
-	concept_tec_ethic_policy_authoritarian_desc: "TO DO"
+		concept_tec_policy_option_ai_outlawed: "$ai_outlawed$ Policy Option"
+		concept_tec_policy_option_ai_outlawed_alias: "$ai_outlawed$"
+		concept_tec_policy_option_ai_outlawed_icon: "£policy£ $ai_outlawed$ Policy Option"
+		concept_tec_policy_option_ai_outlawed_alias_icon: "£policy£ $ai_outlawed$"
+		concept_tec_policy_option_ai_outlawed_desc: "§YOption of ['concept_tec_policy_artificial_intelligence_policy_icon']§!\n\n$ai_outlawed_desc$"
 
-	concept_tec_ethic_policy_xenophobe: "$ethic_xenophobe$ Policies"
-	concept_tec_ethic_policy_xenophobe_alias: "$concept_tec_ethic_policy_xenophobe$"
-	concept_tec_ethic_policy_xenophobe_desc: "TO DO"
+		concept_tec_policy_option_ai_servitude: "$ai_servitude$ Policy Option"
+		concept_tec_policy_option_ai_servitude_alias: "$ai_servitude$"
+		concept_tec_policy_option_ai_servitude_icon: "£policy£ $ai_servitude$ Policy Option"
+		concept_tec_policy_option_ai_servitude_alias_icon: "£policy£ $ai_servitude$"
+		concept_tec_policy_option_ai_servitude_desc: "§YOption of ['concept_tec_policy_artificial_intelligence_policy_icon']§!\n\n$ai_servitude_desc$"
 
-	concept_tec_ethic_policy_xenophile: "$ethic_xenophile$ Policies"
-	concept_tec_ethic_policy_xenophile_alias: "$concept_tec_ethic_policy_xenophile$"
-	concept_tec_ethic_policy_xenophile_desc: "TO DO"
+		concept_tec_policy_option_ai_full_rights: "$ai_full_rights$ Policy Option"
+		concept_tec_policy_option_ai_full_rights_alias: "$ai_full_rights$"
+		concept_tec_policy_option_ai_full_rights_icon: "£policy£ $ai_full_rights$ Policy Option"
+		concept_tec_policy_option_ai_full_rights_alias_icon: "£policy£ $ai_full_rights$"
+		concept_tec_policy_option_ai_full_rights_desc: "§YOption of ['concept_tec_policy_artificial_intelligence_policy_icon']§!\n\n$ai_full_rights_desc$"
 
-	concept_tec_ethic_policy_militarist: "$ethic_militarist$ Policies"
-	concept_tec_ethic_policy_militarist_alias: "$concept_tec_ethic_policy_militarist$"
-	concept_tec_ethic_policy_militarist_desc: "TO DO"
+	concept_tec_policy_war_doctrine: "$policy_war_doctrine$ Policy"
+  concept_tec_policy_war_doctrine_alias: "$policy_war_doctrine$"
+	concept_tec_policy_war_doctrine_icon: "£policy£ $policy_war_doctrine$ Policy"
+	concept_tec_policy_war_doctrine_alias_icon: "£policy£ $policy_war_doctrine$"
+	concept_tec_policy_war_doctrine_desc: "$policy_war_doctrine_desc$\n\n§YUnlocked by finishing the §HSupremacy§! Tradition tree§!\n\nOptions:\n - ['concept_tec_policy_option_defense_in_depth_doctrine_alias']\n - ['concept_tec_policy_option_hit_and_run_doctrine_alias']\n - ['concept_tec_policy_option_rapid_deployment_doctrine_alias']\n - ['concept_tec_policy_option_no_retreat_doctrine_alias']"
 
-	concept_tec_ethic_policy_pacifist: "$ethic_pacifist$ Policies"
-	concept_tec_ethic_policy_pacifist_alias: "$concept_tec_ethic_policy_pacifist$"
-	concept_tec_ethic_policy_pacifist_desc: "TO DO"
+		concept_tec_policy_option_defense_in_depth_doctrine: "$defense_in_depth_doctrine$ Policy Option"
+		concept_tec_policy_option_defense_in_depth_doctrine_alias: "$defense_in_depth_doctrine$"
+		concept_tec_policy_option_defense_in_depth_doctrine_icon: "£policy£ $defense_in_depth_doctrine$ Policy Option"
+		concept_tec_policy_option_defense_in_depth_doctrine_alias_icon: "£policy£ $defense_in_depth_doctrine$"
+		concept_tec_policy_option_defense_in_depth_doctrine_desc: "§YOption of ['concept_tec_policy_war_doctrine_icon']§!\n\n$defense_in_depth_doctrine_desc$$MOD_SHIP_HOME_TERRITORY_FIRE_RATE_MULT$: §G+10%§!"
 
-	concept_tec_ethic_policy_spiritualist: "$ethic_spiritualist$ Policies"
-	concept_tec_ethic_policy_spiritualist_alias: "$concept_tec_ethic_policy_spiritualist$"
-	concept_tec_ethic_policy_spiritualist_desc: "TO DO"
+		concept_tec_policy_option_hit_and_run_doctrine: "$hit_and_run_doctrine$ Policy Option"
+		concept_tec_policy_option_hit_and_run_doctrine_alias: "$hit_and_run_doctrine$"
+		concept_tec_policy_option_hit_and_run_doctrine_icon: "£policy£ $hit_and_run_doctrine$ Policy Option"
+		concept_tec_policy_option_hit_and_run_doctrine_alias_icon: "£policy£ $hit_and_run_doctrine$"
+		concept_tec_policy_option_hit_and_run_doctrine_desc: "§YOption of ['concept_tec_policy_war_doctrine_icon']§!\n\n$hit_and_run_doctrine_desc$$MOD_SHIP_DISENGAGE_OPPORTUNITIES_ADD$: §G+2§!\n$MOD_SHIP_DISENGAGE_CHANCE_MULT$: §G+33%§!\n$MOD_SHIP_EMERGENCY_FTL$: §G-25%§!"
 
-	concept_tec_ethic_policy_materialist: "Research Focus Policies"
-	concept_tec_ethic_policy_materialist_alias: "$concept_tec_ethic_policy_materialist$"
-	concept_tec_ethic_policy_materialist_desc: "TO DO"
+		concept_tec_policy_option_rapid_deployment_doctrine: "$rapid_deployment_doctrine$ Policy Option"
+		concept_tec_policy_option_rapid_deployment_doctrine_alias: "$rapid_deployment_doctrine$"
+		concept_tec_policy_option_rapid_deployment_doctrine_icon: "£policy£ $rapid_deployment_doctrine$ Policy Option"
+		concept_tec_policy_option_rapid_deployment_doctrine_alias_icon: "£policy£ $rapid_deployment_doctrine$"
+		concept_tec_policy_option_rapid_deployment_doctrine_desc: "§YOption of ['concept_tec_policy_war_doctrine_icon']§!\n\n$rapid_deployment_doctrine_desc$$MOD_SHIP_SPEED_MULT$: §G+25%§!\n$MOD_SHIP_WEAPON_RANGE_MULT$: §G+10%§!"
 
-	concept_tec_ethic_policy_cooperative: "Cooperative Policies"
-	concept_tec_ethic_policy_cooperative_alias: "$concept_tec_ethic_policy_cooperative$"
-	concept_tec_ethic_policy_cooperative_desc: "TO DO"
+		concept_tec_policy_option_no_retreat_doctrine: "$no_retreat_doctrine$ Policy Option"
+		concept_tec_policy_option_no_retreat_doctrine_alias: "$no_retreat_doctrine$"
+		concept_tec_policy_option_no_retreat_doctrine_icon: "£policy£ $no_retreat_doctrine$ Policy Option"
+		concept_tec_policy_option_no_retreat_doctrine_alias_icon: "£policy£ $no_retreat_doctrine$"
+		concept_tec_policy_option_no_retreat_doctrine_desc: "§YOption of ['concept_tec_policy_war_doctrine_icon']§!\n\n§RHas Requirements§!\n\n$no_retreat_doctrine_desc$$MOD_SHIP_DISENGAGE_CHANCE_REDUCTION$: §R100%§!\n$MOD_SHIP_EMERGENCY_FTL_MIN_DAYS_MULT$: §R+50%§!\n$MOD_SHIP_FIRE_RATE_MULT$: §G+33%§!"
 
-	concept_tec_ethic_policy_competitive: "Competitive Policies"
-	concept_tec_ethic_policy_competitive_alias: "$concept_tec_ethic_policy_competitive$"
-	concept_tec_ethic_policy_competitive_desc: "TO DO"
+	concept_tec_policy_trade_policy: "$policy_trade_policy$ Policy"
+  concept_tec_policy_trade_policy_alias: "$policy_trade_policy$"
+	concept_tec_policy_trade_policy_icon: "£policy£ $policy_trade_policy$ Policy"
+	concept_tec_policy_trade_policy_alias_icon: "£policy£ $policy_trade_policy$"
+	concept_tec_policy_trade_policy_desc: "$policy_trade_policy_desc$\n\nOptions:\n - ['concept_tec_policy_option_trade_policy_default_alias']\n - ['concept_tec_policy_option_trade_policy_consumer_goods_alias']\n - ['concept_tec_policy_option_trade_policy_unity_alias']\n - ['concept_tec_policy_option_trade_policy_trade_league_alias']\n - ['concept_tec_policy_option_trade_policy_holy_covenant_alias']\n - ['concept_tec_policy_option_trade_policy_social_alias']\n - ['concept_tec_policy_option_trade_policy_infrastructure_alias']\n - ['concept_tec_policy_option_trade_policy_innovation_alias']\n - ['concept_tec_policy_option_trade_policy_food_alias']\n -['concept_tec_policy_option_trade_policy_mining_alias']
+"
 
-	concept_tec_ethic_policy_ecologist: "$ethic_green$ Policies"
-	concept_tec_ethic_policy_ecologist_alias: "$concept_tec_ethic_policy_ecologist$"
-	concept_tec_ethic_policy_ecologist_desc: "TO DO"
+		concept_tec_policy_option_trade_policy_default: "$trade_policy_default$ Policy Option"
+		concept_tec_policy_option_trade_policy_default_alias: "$trade_policy_default$"
+		concept_tec_policy_option_trade_policy_default_icon: "£policy£ $trade_policy_default$ Policy Option"
+		concept_tec_policy_option_trade_policy_default_alias_icon: "£policy£ $trade_policy_default$"
+		concept_tec_policy_option_trade_policy_default_desc: "§YOption of ['concept_tec_policy_trade_policy_icon']§!\n\n$trade_policy_default_desc$"
 
-	concept_tec_ethic_policy_industrialist: "$ethic_industrial$ Policies"
-	concept_tec_ethic_policy_industrialist_alias: "$concept_tec_ethic_policy_industrialist$"
-	concept_tec_ethic_policy_industrialist_desc: "TO DO"
+		concept_tec_policy_option_trade_policy_consumer_goods: "$trade_policy_consumer_goods$ Policy Option"
+		concept_tec_policy_option_trade_policy_consumer_goods_alias: "$trade_policy_consumer_goods$"
+		concept_tec_policy_option_trade_policy_consumer_goods_icon: "£policy£ $trade_policy_consumer_goods$ Policy Option"
+		concept_tec_policy_option_trade_policy_consumer_goods_alias_icon: "£policy£ $trade_policy_consumer_goods$"
+		concept_tec_policy_option_trade_policy_consumer_goods_desc: "§YOption of ['concept_tec_policy_trade_policy_icon']§!\n\n$trade_policy_consumer_goods_desc$"
 
-	concept_tec_ethic_policy_elitist: "$ethic_elitist$ Policies"
-	concept_tec_ethic_policy_elitist_alias: "$concept_tec_ethic_policy_elitist$"
-	concept_tec_ethic_policy_elitist_desc: "TO DO"
+		concept_tec_policy_option_trade_policy_unity: "$trade_policy_unity$ Policy Option"
+		concept_tec_policy_option_trade_policy_unity_alias: "$trade_policy_unity$"
+		concept_tec_policy_option_trade_policy_unity_icon: "£policy£ $trade_policy_unity$ Policy Option"
+		concept_tec_policy_option_trade_policy_unity_alias_icon: "£policy£ $trade_policy_unity$"
+		concept_tec_policy_option_trade_policy_unity_desc: "§YOption of ['concept_tec_policy_trade_policy_icon']§!\n\n$trade_policy_unity_desc$"
 
-	concept_tec_ethic_policy_pluralist: "$ethic_pluralist$ Policies"
-	concept_tec_ethic_policy_pluralist_alias: "$concept_tec_ethic_policy_pluralist$"
-	concept_tec_ethic_policy_pluralist_desc: "TO DO"
+		concept_tec_policy_option_trade_policy_trade_league: "$trade_policy_trade_league$ Policy Option"
+		concept_tec_policy_option_trade_policy_trade_league_alias: "$trade_policy_trade_league$"
+		concept_tec_policy_option_trade_policy_trade_league_icon: "£policy£ $trade_policy_trade_league$ Policy Option"
+		concept_tec_policy_option_trade_policy_trade_league_alias_icon: "£policy£ $trade_policy_trade_league$"
+		concept_tec_policy_option_trade_policy_trade_league_desc: "§YOption of ['concept_tec_policy_trade_policy_icon']§!\n\n$trade_policy_trade_league_desc$"
+
+		concept_tec_policy_option_trade_policy_holy_covenant: "$trade_policy_holy_covenant$ Policy Option"
+		concept_tec_policy_option_trade_policy_holy_covenant_alias: "$trade_policy_holy_covenant$"
+		concept_tec_policy_option_trade_policy_holy_covenant_icon: "£policy£ $trade_policy_holy_covenant$ Policy Option"
+		concept_tec_policy_option_trade_policy_holy_covenant_alias_icon: "£policy£ $trade_policy_holy_covenant$"
+		concept_tec_policy_option_trade_policy_holy_covenant_desc: "§YOption of ['concept_tec_policy_trade_policy_icon']§!\n\n$trade_policy_holy_covenant_desc$"
+
+		concept_tec_policy_option_trade_policy_social: "$trade_policy_social$ Policy Option"
+		concept_tec_policy_option_trade_policy_social_alias: "$trade_policy_social$"
+		concept_tec_policy_option_trade_policy_social_icon: "£policy£ $trade_policy_social$ Policy Option"
+		concept_tec_policy_option_trade_policy_social_alias_icon: "£policy£ $trade_policy_social$"
+		concept_tec_policy_option_trade_policy_social_desc: "§YOption of ['concept_tec_policy_trade_policy_icon']§!\n\n$trade_policy_social_desc$$MOD_PLANET_COLONY_DEVELOPMENT_SPEED_MULT$: §G+25%§!"
+
+		concept_tec_policy_option_trade_policy_infrastructure: "$trade_policy_infrastructure$ Policy Option"
+		concept_tec_policy_option_trade_policy_infrastructure_alias: "$trade_policy_infrastructure$"
+		concept_tec_policy_option_trade_policy_infrastructure_icon: "£policy£ $trade_policy_infrastructure$ Policy Option"
+		concept_tec_policy_option_trade_policy_infrastructure_alias_icon: "£policy£ $trade_policy_infrastructure$"
+		concept_tec_policy_option_trade_policy_infrastructure_desc: "§YOption of ['concept_tec_policy_trade_policy_icon']§!\n\n$trade_policy_infrastructure_desc$$MOD_PLANET_BUILDING_BUILD_SPEED_MULT$: §G+20%§!\n$MOD_STARBASE_SHIPYARD_BUILD_SPEED_MULT$: §G+10%§!"
+
+		concept_tec_policy_option_trade_policy_innovation: "$trade_policy_innovation$ Policy Option"
+		concept_tec_policy_option_trade_policy_innovation_alias: "$trade_policy_innovation$"
+		concept_tec_policy_option_trade_policy_innovation_icon: "£policy£ $trade_policy_innovation$ Policy Option"
+		concept_tec_policy_option_trade_policy_innovation_alias_icon: "£policy£ $trade_policy_innovation$"
+		concept_tec_policy_option_trade_policy_innovation_desc: "§YOption of ['concept_tec_policy_trade_policy_icon']§!\n\n$trade_policy_innovation_desc$"
+
+		concept_tec_policy_option_trade_policy_food: "$trade_policy_food$ Policy Option"
+		concept_tec_policy_option_trade_policy_food_alias: "$trade_policy_food$"
+		concept_tec_policy_option_trade_policy_food_icon: "£policy£ $trade_policy_food$ Policy Option"
+		concept_tec_policy_option_trade_policy_food_alias_icon: "£policy£ $trade_policy_food$"
+		concept_tec_policy_option_trade_policy_food_desc: "§YOption of ['concept_tec_policy_trade_policy_icon']§!\n\n$trade_policy_food_desc$"
+
+		concept_tec_policy_option_trade_policy_mining: "$trade_policy_mining$ Policy Option"
+		concept_tec_policy_option_trade_policy_mining_alias: "$trade_policy_mining$"
+		concept_tec_policy_option_trade_policy_mining_icon: "£policy£ $trade_policy_mining$ Policy Option"
+		concept_tec_policy_option_trade_policy_mining_alias_icon: "£policy£ $trade_policy_mining$"
+		concept_tec_policy_option_trade_policy_mining_desc: "§YOption of ['concept_tec_policy_trade_policy_icon']§!\n\n$trade_policy_mining_desc$"
+
+	concept_tec_policy_goods_policy: "$policy_goods_policy$ Policy"
+  concept_tec_policy_goods_policy_alias: "$policy_goods_policy$"
+	concept_tec_policy_goods_policy_icon: "£policy£ $policy_goods_policy$ Policy"
+	concept_tec_policy_goods_policy_alias_icon: "£policy£ $policy_goods_policy$"
+	concept_tec_policy_goods_policy_desc: "$policy_goods_policy_desc$\n\nOptions:\n - ['concept_tec_policy_option_consumer_goods_minerals_alias']\n - ['concept_tec_policy_option_consumer_goods_mixed_alias']\n - ['concept_tec_policy_option_consumer_goods_food_alias']"
+
+		concept_tec_policy_option_consumer_goods_minerals: "$consumer_goods_minerals$ Policy Option"
+		concept_tec_policy_option_consumer_goods_minerals_alias: "$consumer_goods_minerals$"
+		concept_tec_policy_option_consumer_goods_minerals_icon: "£policy£ $consumer_goods_minerals$ Policy Option"
+		concept_tec_policy_option_consumer_goods_minerals_alias_icon: "£policy£ $consumer_goods_minerals$"
+		concept_tec_policy_option_consumer_goods_minerals_desc: "§YOption of ['concept_tec_policy_artificial_intelligence_policy_icon']§!\n\n$consumer_goods_minerals_desc$"
+
+		concept_tec_policy_option_consumer_goods_mixed: "$consumer_goods_mixed$ Policy Option"
+		concept_tec_policy_option_consumer_goods_mixed_alias: "$consumer_goods_mixed$"
+		concept_tec_policy_option_consumer_goods_mixed_icon: "£policy£ $consumer_goods_mixed$ Policy Option"
+		concept_tec_policy_option_consumer_goods_mixed_alias_icon: "£policy£ $consumer_goods_mixed$"
+		concept_tec_policy_option_consumer_goods_mixed_desc: "§YOption of ['concept_tec_policy_artificial_intelligence_policy_icon']§!\n\n$consumer_goods_mixed_desc$"
+
+		concept_tec_policy_option_consumer_goods_food: "$consumer_goods_food$ Policy Option"
+		concept_tec_policy_option_consumer_goods_food_alias: "$consumer_goods_food$"
+		concept_tec_policy_option_consumer_goods_food_icon: "£policy£ $consumer_goods_food$ Policy Option"
+		concept_tec_policy_option_consumer_goods_food_alias_icon: "£policy£ $consumer_goods_food$"
+		concept_tec_policy_option_consumer_goods_food_desc: "§YOption of ['concept_tec_policy_artificial_intelligence_policy_icon']§!\n\n$consumer_goods_food_desc$"
  # /
  # Buildings
 	concept_tec_ethic_building_temple: "Temples"
