--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -112,6 +112,19 @@
 
 	trigger_tec_warning:1 "£trigger_tec_warning£ "
 
+	tec_loc_ai_ruler_node: "£tec_ai_ruler£ AI Ruler Node"
+	tec_loc_ai_councilor_node: "£tec_ai_councilor£ AI Councilor Node"
+	tec_loc_ai_planetary_node: "£tec_ai_planetary£ AI Planetary Node"
+	tec_loc_ai_node: "£tec_ai_node£ AI Leader Node"
+	tec_loc_ai_idle_node: "£tec_ai_node£ Idle AI Leader Node"
+	tec_loc_ruler: "£ruler£ Ruler"
+	tec_loc_ruler_plural: "£ruler£ Rulers"
+	tec_loc_councilor: "£council£ Councilor"
+	tec_loc_councilor_plural: "£council£ Councilors"
+	tec_loc_idle_leader: "Idle Leader"
+
+	tec_loc_councilor_traits: "£council£ Councilor Traits"
+	tec_loc_normal_traits: "£noclass£ Normal Traits"
 
 # --------------------------- MACHINE COMPUTING POWER --------------------------------
 	TEC_PROCESSCAP_WINDOW_TITLE: "Processing Capacity"
